overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp-ingress
spec:
  rules:
    - host: testapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  name: http
